--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -163,14 +163,11 @@ add_library(Utility  src/Utils/utility.cpp)
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-
-#add_executable(Controller src/Nodes/startControllerNode.cpp)
-#target_link_libraries(Utility ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
-#target_link_libraries(Drone Utility ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
-#target_link_libraries(Controller Drone LP2Filter Filter Utility ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
-
 add_executable(odometry_node src/Nodes/odometry_node.cpp)
 target_link_libraries(odometry_node Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
+
+add_executable(eta_reference_node src/Nodes/eta_reference_node.cpp)
+target_link_libraries(eta_reference_node Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
 add_executable(outer_loop_node src/Nodes/outer_loop_node.cpp)
 target_link_libraries(outer_loop_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
