Removed calculation of error from outer_loop_node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,11 +169,11 @@ target_link_libraries(odometry_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 add_executable(trajectory_node src/Nodes/trajectory_node.cpp)
 target_link_libraries(trajectory_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
+add_executable(outer_loop_node src/Nodes/outer_loop_node.cpp)
+target_link_libraries(outer_loop_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
+
 #add_executable(eta_reference_node src/Nodes/eta_reference_node.cpp)
 #target_link_libraries(eta_reference_node Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
-
-#add_executable(outer_loop_node src/Nodes/outer_loop_node.cpp)
-#target_link_libraries(outer_loop_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
 #add_executable(inner_loop_node src/Nodes/inner_loop_node.cpp)
 #target_link_libraries(inner_loop_node Utility Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
