--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ add_library(Utility  src/Utils/utility.cpp)
 
 ## Declare a C++ executable
 add_executable(odometry_node src/Nodes/odometry_node.cpp)
-target_link_libraries(odometry_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
+target_link_libraries(odometry_node Utility ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
 add_executable(trajectory_node src/Nodes/trajectory_node.cpp)
 target_link_libraries(trajectory_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
