--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
   FILES
   UavState.msg
+  DesiredAttritude.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -136,7 +137,7 @@ add_executable(outer_loop_node src/Nodes/outer_loop_node.cpp)
 target_link_libraries(outer_loop_node ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
 add_executable(eta_reference_node src/Nodes/eta_reference_node.cpp)
-target_link_libraries(eta_reference_node Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
+target_link_libraries(eta_reference_node Differentiator Utility ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
 
 add_executable(inner_loop_node src/Nodes/inner_loop_node.cpp)
 target_link_libraries(inner_loop_node Utility Differentiator ${Eigen_INCLUDE_DIRS} ${catkin_LIBRARIES})
