Deleted unused messages. Redefined topic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,8 +61,7 @@ find_package(catkin REQUIRED COMPONENTS
 # Generate messages in the 'msg' folder
 add_message_files(
   FILES
-  UavState.msg
-  DesiredAttritude.msg
+  State.msg
 )
 
 ## Generate services in the 'srv' folder
